[gd_scene load_steps=2 format=3 uid="uid://lineup_editor_new"]

[ext_resource type="Script" path="res://scripts/LineupEditor.gd" id="1_lineup_script"]

[node name="LineupEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_lineup_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.15, 0.2, 1.0)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "EDITOR DE ALINEACIÓN - FÚTBOL 7"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 28
theme_override_colors/font_color = Color(1, 1, 1, 1)

[node name="FormationContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="FormationLabel" type="Label" parent="VBoxContainer/FormationContainer"]
layout_mode = 2
text = "FORMACIÓN:"
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(1, 1, 1, 1)

[node name="FormationSelector" type="OptionButton" parent="VBoxContainer/FormationContainer"]
layout_mode = 2
custom_minimum_size = Vector2(120, 40)

[node name="MainHBox" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 25

[node name="FieldContainer" type="Control" parent="VBoxContainer/MainHBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_minimum_size = Vector2(900, 500)

[node name="FieldBackground" type="ColorRect" parent="VBoxContainer/MainHBox/FieldContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.15, 0.6, 0.15, 1.0)

[node name="FieldLines" type="Control" parent="VBoxContainer/MainHBox/FieldContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CenterLine" type="ColorRect" parent="VBoxContainer/MainHBox/FieldContainer/FieldLines"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -2.0
offset_right = 2.0
color = Color(1, 1, 1, 0.8)

[node name="CenterCircle" type="Control" parent="VBoxContainer/MainHBox/FieldContainer/FieldLines"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0

[node name="LeftGoalArea" type="ColorRect" parent="VBoxContainer/MainHBox/FieldContainer/FieldLines"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 10.0
offset_top = -80.0
offset_right = 100.0
offset_bottom = 80.0
color = Color(1, 1, 1, 0.3)

[node name="RightGoalArea" type="ColorRect" parent="VBoxContainer/MainHBox/FieldContainer/FieldLines"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -80.0
offset_right = -10.0
offset_bottom = 80.0
color = Color(1, 1, 1, 0.3)

[node name="PlayersContainer" type="VBoxContainer" parent="VBoxContainer/MainHBox"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
custom_minimum_size = Vector2(300, 500)

[node name="PlayersTitle" type="Label" parent="VBoxContainer/MainHBox/PlayersContainer"]
layout_mode = 2
text = "PLANTILLA FC BUFAS"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 20
theme_override_colors/font_color = Color(1, 1, 1, 1)

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/MainHBox/PlayersContainer"]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true
horizontal_scroll_mode = 0
custom_minimum_size = Vector2(300, 450)

[node name="PlayerGrid" type="GridContainer" parent="VBoxContainer/MainHBox/PlayersContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
columns = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10

[node name="ButtonsContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 20

[node name="BackButton" type="Button" parent="VBoxContainer/ButtonsContainer"]
layout_mode = 2
text = "VOLVER"
custom_minimum_size = Vector2(150, 50)
theme_override_font_sizes/font_size = 16

[node name="SaveButton" type="Button" parent="VBoxContainer/ButtonsContainer"]
layout_mode = 2
text = "GUARDAR ALINEACIÓN"
custom_minimum_size = Vector2(200, 50)
theme_override_font_sizes/font_size = 16
